<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">在线实验中心</string>
    <string name="userAccount">账号</string>
    <string name="userPassword">密码</string>
    <string name="accountHint">请输入用户名</string>
    <string name="passwordHint">请输入密码</string>
    <string name="userLogin">登录</string>
    <string name="userSignUp">注册账号</string>
    <string name="forgetPassword">忘记密码?</string>

    <string name="accountOrPasswordError">账号或密码错误</string>


</resources>