<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/login_background_image">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:src="@drawable/app_logo"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/userAccount"
            android:paddingLeft="40dp"
            android:textSize="20sp"/>
        <EditText
            android:textColorHighlight="@color/blue"
            android:id="@+id/userAccount"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:paddingLeft="20dp"
            android:hint="@string/accountHint"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"

            android:layout_height="wrap_content"
            android:text="@string/userPassword"
            android:paddingLeft="40dp"
            android:textSize="20sp"/>
        <EditText
            android:textColorHighlight="@color/blue"
            android:id="@+id/userPassword"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:paddingLeft="20dp"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:hint="@string/passwordHint"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/userLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:padding="5dp"
            android:text="@string/userLogin"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:textColor="#fff"

            android:background="@color/blue"/>
    </LinearLayout>


</LinearLayout>